# code

./: .gitignore  Tutor test  cao.c  classification.py  code  code.c  course.js  expertt1.ipynb  expertt2.ipynb  expertt3.ipynb  helloworld  helloworld.cpp  report.txt  script.py  semaphore_sleep_barber_problem.cpp  sleep_barber_problem.cpp  tutor  tutor.c  vimrc
AutoPilot/Samples/: a.py
AutoPilot/Samples/Autopilot/PredefinedRouteSample/: CMakeLists.txt
AutoPilot/Samples/Autopilot/PredefinedRouteSample/src/: PredefinedRoute.py  PredefinedRouteSample.cpp
AutoPilot/Samples/HDMap/: CMakeLists.txt  gen_vs_proj.bat
AutoPilot/Samples/HDMap/include/: SampleContainsLane.h  SampleGenerateRoute.h  SampleGetCrossHatchList.h  SampleGetCrosswalkList.h  SampleGetDistanceToLaneBoundary.h  SampleGetHeights.h  SampleGetInertialFromLaneST.h  SampleGetLaneLink.h  SampleGetLaneMiddlePoint.h  SampleGetLaneST.h  SampleGetLaneSample.h  SampleGetLaneType.h  SampleGetLaneWidth.h  SampleGetNearLanes.h  SampleGetNearLanesWithAngle.h  SampleGetNearMostLane.h  SampleGetParkingSpaceList.h  SampleGetPredefinedRoute.h  SampleGetRoadMark.h  SampleGetRoadST.h  SampleGetStoplineList.h  SampleGetTrafficLightList.h  SampleGetTrafficSignList.h  SampleNavigate.h
AutoPilot/Samples/HDMap/src/: HDMapSample.cpp  HDMapSample.py
AutoPilot/Samples/HDMap/test_case/: Ultrasonic.sim  parking.xodr  test_sensor.sim
AutoPilot/Samples/Workshop/LKA/: CMakeLists.txt
AutoPilot/Samples/Workshop/LKA/src/: LKASample.cpp
AutoPilot/Samples/include/google/protobuf/: CMakeLists.txt  generated_message_util.h  message.cc  message.h  protobuf.cmake  wire_format_lite.h
AutoPilot/Samples/include/google/protobuf/io/: coded_stream.h
AutoPilot/Samples/include/google/protobuf/stubs/: strutil.h
BigDataLabs/final.lab1/: .factorypath  .project  pom.xml
BigDataLabs/final_lab2/: create_job.sql  create_table.sql  kafka_order_to_send.json  my_create_job.sql  my_create_table.sql  my_kafka_data.json
BigDataLabs/java-hadoop/: .project
BigDataLabs/lab3.hbase.inputSource/: .factorypath  .project
BigDataLabs/lab4.scala.test/: pom.xml
CPrimerPlus6E_code/Ch17/: films3.c  list
Dir/: data.out
Dir/lab4/: .run.swp  bochsout.txt
Jupyter/: .swp  erpert1.ipynb  expert1.o.ipynb
MachineLearningClass-master/Expert 1-3 Source Code/: Untitled.ipynb  exper3.ipynb  exper3_adv.py
OOP_Practise/: practice1_matrix  practice1_matrix.cpp
OOP_Practise/practice1/: data1.in  practice1_matrix  practice1_matrix.cpp
OOP_Practise/practice2/: CMakeLists.txt  build.sh  compile_commands.json  practice2
OOP_Practise/practice2.2/: CMakeLists.txt  build.sh  compile_commands.json  data.in  practice3
OOP_Practise/practice3/: CMakeLists.txt  debug.sh  practice3
OOP_Practise/practice4/: practice4_IOStream  practice4_IOStream.cpp
OOP_Practise/practice5.1.1/: CMakeLists.txt  compile_commands.json
OOP_Practise/practice5.1.2/: CMakeLists.txt  compile_commands.json  practice3
OOP_Practise/practice5.2/: CMakeLists.txt  compile_commands.json  debug.sh  practice5.2
algorithm/: '  P4779_Dijkstra.cpp  data.in
algorithm/Dijkstra/: P4779_Dijkstra  P4779_Dijkstra.cpp
algorithm/Greedy/: .rustfmt.toml  README.md  makefile
algorithm/csp/: rename_directories.sh
algorithm/dynamic_programming/: README.md  makefile
algorithm/mergesort_and_quicksort/: README.md  makefile
aoapc/chapter3/: All_in_All  All_in_All.c  Box  Box.c  Box_R1  Box_R1.c  Box_R2  Box_R2.c  Box_std  Box_std.c  RD_std  RD_std.cpp  Repeating Decimals  Repeating Decimals.c  flen  flen.c  floating-point_numbers  floating-point_numbers.c  kickdown  kickdown.c  std.out
aoapc/chapter4/: A_Typical_Homework_uva12412  A_Typical_Homework_uva12412.c  Computer_Management  Computer_Management.c  D:\学生成绩管理系统.tXt  Fei_Typical_Homework  Fei_Typical_Homework.cpp  Flooded!UVa815  Flooded!UVa815.c  Heihei_Homework  Heihei_Homework.c  a.out  ancient_cipher  ancient_cipher.c  data.in  data.out  diff.sh  diff.txt  functional  functional.c  hangman_judge_uva489  hangman_judge_uva489.c  message_decoding_uva213  message_decoding_uva213.c  spreadsheet_tracking_uva512  spreadsheet_tracking_uva512.c  std  std.cpp  std.out  swap  swap.c  the_dole_queue_uva133  the_dole_queue_uva133.c
aoapc/chapter6/: #not_so_mobile_uva839.cpp#  -d  .Boxes_in_a_Line_Uva_12657.cpp.swp  .data.in.swp  .matrix_chain_multiplication_uva_441.cpp.swp  .stack_practise.cpp.swp  .std.out.swp  .struct_practise.cpp.swp  .vimspector.json  Boxes_in_a_Line_Uva_12657  Boxes_in_a_Line_Uva_12657.cpp  Boxes_in_a_Line_Uva_12657.out  Concurrency_Simulator_UVa210  Concurrency_Simulator_UVa210.c  Dropping_Balls_uva_679  Dropping_Balls_uva_679.cpp  LinkedListADPPractice  LinkedListADP_film.c  LinkedListADTPractice.c  LinkedListADTPractice.h  Trees_on_the_Level_Array_UVA122  Trees_on_the_Level_Array_UVA122.cpp  Trees_on_the_Level_UVA122  Trees_on_the_Level_UVA122.cpp  Trees_on_the_level_memoryPool_uva122.cpp  data.in  heapsort  heapsort.cpp  matrix_chain_multiplication_uva_442  matrix_chain_multiplication_uva_442.cpp  not_so_mobile_uva839.cpp  que_test.c  queue.c  queue.h  rails_uva_514  rails_uva_514.cpp  stack_practise  stack_practise.cpp  stack_practise_cpp  stack_practise_cpp.cpp  (+12 more)
assignment1/: features.ipynb  knn.ipynb  practice.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
assignment1/practice/: linear_regression.ipynb  practice.ipynb
automata/: cfg2cnf2gnf.py  eg.py  ~$自动机实验二.docx  自动机实验二.docx
big-screen-vue-datav/: README.md.bak
chatgpt/: index.js  package.json
chatgpt/apps/: chat.js
compilers_course/: parser.cpp  parser.h
cuda/: hello.cu
final/: data.in  pt2.c  pt3  pt4  pt4.c  t1.c
gnn/: 2_emojify.ipynb  3_loan_prediction.ipynb  export_pdf.py
kb_ans/: README.md
linux_labs/: bc.sh
middleterm/: 1prog  1prog.c  data.in  fc.sh  t1  t2.c  t4  t4.c  zoma  zoma.c
mysun/: data.in
nlp/: dockerfile
postgresqlJDBC/: postgresqlAccess.java
pta/: t2  t2.c  t3  t3.c  t4.c  t5  t6  t6.c  t7.c
python/: 1.py  2.py
struct/: jxy  jxy.c  jxy.sln  jxy.vcxproj  stud.c  stud.h
tools/: PostProcess.py  baidu2yolo.py
(+2467 files in other folders)
